<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/mainLayoutId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/rowsEditTextId"
                    style="@style/_0width"
                    android:hint="@string/number_of_rows_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusRight="@+id/columnsEditTextId">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/columnsEditTextId"
                    style="@style/_0width"
                    android:hint="@string/number_of_columns_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusRight="@+id/iterationsEditTextId" />

                <EditText
                    android:id="@+id/iterationsEditTextId"
                    style="@style/_0width"
                    android:hint="@string/number_of_iterations_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButtonId"
                    style="@style/_0width"
                    android:onClick="clearButtonClick"
                    android:text="@string/clear_button_text" />

                <Button
                    android:id="@+id/randomButtonId"
                    style="@style/_0width"
                    android:onClick="randomButtonClick"
                    android:text="@string/random_button_text" />

                <Button
                    android:id="@+id/calculateButtonId"
                    style="@style/_0width"
                    android:onClick="calculateButtonClick"
                    android:text="@string/calculate_button_text" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableLayoutId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>